<resources>
    <string name="app_name">SiLab</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="si_paragraph_1"></string>
    <string name="tab_title">Order</string>
    <string name="tidak">No</string>
    <string name="ya">Yes</string>


    <!-- Navigation Menu -->
    <string name="item_vertical_stepper">Vertical Stepper (Item View)</string>
    <string name="item_vertical_stepper_adapter">Vertical Stepper (Adapter)</string>

    <!-- Vertical Stepper View Sample Item -->
    <string name="content_step_0">Upload Payment Proof to Continue Order</string>
    <string name="content_step_1">Wait for Confirmation Payment</string>
    <string name="content_step_2">This is the last step. You can finish steps now.</string>

    <string name="toggle_animation_button">Toggle Animation</string>
    <string name="menu_belum_tersedia">This menu is not avaliable</string>

    <!-- Font -->
    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto_thin">sans-serif-thin</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="harga_satuan">Price Per Unit</string>
    <string name="harga_total">Total price</string>
    <string name="notifikasi">Notification</string>
    <string name="beranda">Home</string>
    <string name="profil">Profile</string>
    <string name="lain">Other</string>
    <string name="upload_payment_proof">Upload Payment proof</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="proof_payment_suces_sent">Success send payment proof </string>
    <string name="payment_verivied">Payment verivied</string>
    <string name="wait_payment">Order is being processed, waiting for payment</string>
    <string name="waiting_payment_verification">Waiting payment verification</string>
        <string name="payment_verified_waiting_sample">Waiting sample Received</string>
    <string name="barang_diterim_dan_sedangdirposes">Sample has been received and will be processed</string>
    <string name="test_complete">Order Complete</string>
    <string name="download">Download</string>
    <string name="sukses">Success</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total</string>
    <string name="price">Price</string>
    <string name="nama_pemilik_rekening">Name of Account Owner</string>
    <string name="pt_surveyor_indonesia">PT. Surveyor Indonesia</string>
    <string name="msg_exit">Are you sure want to exit the application?</string>
    <string name="registration_success">Registration Success</string>
    <string name="cancel_underline"><u>Cancel</u></string>

    <string name="msg_confirm">Summary order is below \n Are you sure want to proceed this order?</string>
    <string name="check_order">Please check order before you confirm</string>
    <string name="loading">Loading</string>
    <string name="connection_problem">Connection Problem</string>
    <string name="success_login">Success Login</string>
    <string name="failed_login">Failed Login, Check email and password</string>
    <string name="please_wait">Please wait...</string>
    <string name="failed_get_picture">Failed get picture</string>
    <string name="cancel">Cancel</string>
    <string name="something_wrong_wDB">Something wrong with database</string>
    <string name="please_login_first">Please login first</string>
    <string name="Succes_upload">Success Upload</string>
    <string name="file_size_too_large">File size is too large</string>
    <string name="cancel_picking_image">Cancel picking image</string>
    <string name="open_gallery_and_upload_image">Open Gallery and Upload Image</string>
    <string name="failed_upload">Failed upload</string>
    <string name="failed_order">Failed order</string>
    <string name="order_success_checknotif">Order Success, Please check the notification for information</string>
    <string name="logout">logout</string>
</resources>

