<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <moe.feng.common.stepperview.VerticalStepperItemView
            android:id="@+id/stepper_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:step_animation_duration="750"
            app:step_index="1"
            app:step_state="selected"
            app:step_summary_done="@string/proof_payment_suces_sent"
            app:step_title="Step 1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/content_step_0" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnUploadPaymentProof"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/material_blue_500"
                        android:text="@string/upload_payment_proof"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/btnCancelPayment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/cancel_order" />

                </LinearLayout>

            </LinearLayout>

        </moe.feng.common.stepperview.VerticalStepperItemView>

        <moe.feng.common.stepperview.VerticalStepperItemView
            android:id="@+id/stepper_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:step_index="2"
            app:step_summary_done="@string/proof_payment_suces_sent"
            app:step_title="Step 2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/content_step_1" />

            </LinearLayout>

        </moe.feng.common.stepperview.VerticalStepperItemView>

        <moe.feng.common.stepperview.VerticalStepperItemView
            android:id="@+id/stepper_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:step_index="3"
            app:step_title="Step 3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/content_step_2" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                </LinearLayout>

            </LinearLayout>

        </moe.feng.common.stepperview.VerticalStepperItemView>

        <moe.feng.common.stepperview.VerticalStepperItemView
            android:id="@+id/stepper_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:step_index="4"
            app:step_summary_done="@string/proof_payment_suces_sent"
            app:step_title="Step 4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/content_step_1" />

            </LinearLayout>

        </moe.feng.common.stepperview.VerticalStepperItemView>

        <moe.feng.common.stepperview.VerticalStepperItemView
            android:id="@+id/stepper_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:step_index="5"
            app:step_summary_done="@string/proof_payment_suces_sent"
            app:step_title="Step 5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/content_step_1" />

            </LinearLayout>

        </moe.feng.common.stepperview.VerticalStepperItemView>

        <moe.feng.common.stepperview.VerticalStepperItemView
            android:id="@+id/stepper_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:step_index="6"
            app:step_summary_done="@string/proof_payment_suces_sent"
            app:step_title="Step 6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/content_step_1" />

            </LinearLayout>

        </moe.feng.common.stepperview.VerticalStepperItemView>

        <moe.feng.common.stepperview.VerticalStepperItemView
            android:id="@+id/stepper_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:step_index="7"
            app:step_is_last="true"
            app:step_summary_done="@string/proof_payment_suces_sent"
            app:step_title="Step 7">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/content_step_1" />

            </LinearLayout>

        </moe.feng.common.stepperview.VerticalStepperItemView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>